--- a/BombPlus/app/src/main/res/values/strings.xml
+++ b/BombPlus/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">BombPlus</string>
+
+
+    <string name="tab_home">首页</string>
+    <string name="tab_fund">发现</string>
+    <string name="tab_photo">图片</string>
+    <string name="tab_mine">我的</string>
+
 </resources>
