1.视频播详情页播放 2.调整package 结构 3.升级某些不兼容androidx 三方库

--- a/BombPlus/app/src/main/res/values/strings.xml
+++ b/BombPlus/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
 
     <string name="tab_home">首页</string>
     <string name="tab_fund">发现</string>
-    <string name="tab_photo">图片</string>
+    <string name="tab_gank">干货</string>
     <string name="tab_mine">我的</string>
 
 </resources>
